# skills-master

./: .gitignore  LICENSE  NOTICE.md  README.md  README.zh-CN.md  index.html  install.ps1  install.sh  package-lock.json  package.json
.github/scripts/: check-version-sync.sh  sync-version.sh
.github/workflows/: build.yml  ci.yml  release.yml
Casks/: agentskills.rb  skillsmaster.rb
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/agents/: 360claw.toml  antigravity.toml  autoclaw.toml  claude-code.toml  cline.toml  codebuddy.toml  codex.toml  copaw.toml  copilot-cli.toml  cursor.toml  dumate.toml  gemini-cli.toml  jvsclaw.toml  kiro.toml  linkfoxclaw.toml  lobehub.toml  lobsterai.toml  loomy.toml  manus.toml  mulerun.toml  nexu.toml  niumaai.toml  openclaw.toml  opencode.toml  poorclaw.toml  qclaw.toml  qoderwork.toml  stepbuddy.toml  tabbit.toml  trae.toml  windsurf.toml  workbuddy.toml  wukong.toml
src-tauri/bundle/: skills-master.desktop
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  network.rs  watcher.rs
src-tauri/src/commands/: agents.rs  ai.rs  marketplace.rs  mod.rs  repos.rs  settings.rs  skills.rs  tags.rs
src-tauri/src/installer/: install.rs  uninstall.rs
src-tauri/src/marketplace/: clawhub.rs  mod.rs  skillhub.rs  skillssh.rs
src-tauri/src/models/: agent.rs  mod.rs  repo.rs  skill.rs
src-tauri/src/parser/: mod.rs  skillmd.rs
src-tauri/src/registry/: loader.rs
src-tauri/src/scanner/: engine.rs
src-tauri/src/security/: mod.rs  secrets.rs
src/components/: AISearchBar.tsx  AISettingsPanel.tsx  AISkillExplainer.tsx  AgentRow.tsx  ImportWizard.tsx  InstallToAgentsDialog.tsx  Layout.tsx  LiquidGlass.tsx  MarkdownContent.tsx  NetworkSettingsPanel.tsx  ResizeHandle.tsx  SearchInput.tsx  SkillTagsEditor.tsx  ToastProvider.tsx
src/components/ui/: button.tsx
src/hooks/: useAISettings.ts  useAccentColor.ts  useAgents.ts  useRepos.ts  useResizable.ts  useSkillTags.ts  useSkills.ts  useTheme.ts
src/i18n/: en.ts  index.ts  zh-CN.ts
src/lib/: agentIcons.ts  markdown.ts  utils.ts
src/pages/: Dashboard.tsx  Marketplace.tsx  Settings.tsx  SkillsManager.tsx
