[package]
name = "agent-skills"
version = "0.1.0"
description = "A desktop app for managing AI agent skills across multiple agents"
authors = ["AgentSkills Contributors"]
license = "MIT"
repository = "https://github.com/chrlsio/agent-skills"
edition = "2021"

[lib]
name = "agent_skills_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
handlebars = "6"
notify = "7"
reqwest = { version = "0.12", features = ["json", "blocking"] }
scraper = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
git2 = "0.19"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
glob = "0.3"
thiserror = "2"
tokio = { version = "1", features = ["rt", "macros"] }
regex = "1"
urlencoding = "2"

