[package]
name = "skills-master"
version = "0.9.0"
description = "技能管家 — 跨平台桌面应用，统一管理 36 款 AI Agent 的技能"
authors = ["五柳大叔"]
license = "MIT"
repository = "https://github.com/louiseliu/skills-master"
edition = "2021"

[lib]
name = "skills_master_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
handlebars = "6"
notify = "7"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
scraper = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
git2 = { version = "0.19", features = ["vendored-openssl"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
glob = "0.3"
thiserror = "2"
tokio = { version = "1", features = ["rt", "macros"] }
regex = "1"
urlencoding = "2"
which = "8.0.2"

